# metalcab

./: BSD  Cargo.toml  README.md
examples/: simple.rs
src/: compat.rs  lib.rs  raw.rs
